Finished application frontend + added methods and tests to create an envelope (will remove later)

--- a/PostalRateCalculator-Frontend/index.html
+++ b/PostalRateCalculator-Frontend/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
     <meta charset="utf-8">
     <title>postalratecalculator-frontend</title>
   </head>
